# vcpkg_things

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  helloworld.cpp  vcpkg.json
test/: hello_test.cpp
